# kicad-source-mirror

./: .travis.yml  CMakeLists.txt
3d-viewer/: 3d_aux.cpp  3d_canvas.cpp  3d_class.cpp  3d_draw.cpp  3d_draw_basic_functions.cpp  3d_draw_board_body.cpp  3d_draw_helper_functions.cpp  3d_frame.cpp  3d_material.cpp  3d_material.h  3d_mesh_model.cpp  3d_read_mesh.cpp  3d_struct.h  3d_toolbar.cpp  3d_types.h  3d_viewer_id.h  CMakeLists.txt  info3d_visu.cpp  vrml_aux.h  vrml_v1_modelparser.cpp  vrml_v2_modelparser.cpp  vrmlmodelparser.cpp  x3dmodelparser.cpp
CMakeModules/: download_gtest.cmake
bitmap2component/: CMakeLists.txt  bitmap2cmp_gui.cpp  bitmap2component.cpp
bitmaps_png/: CMakeLists.txt
common/: .CMakeLists.txt.swp  CMakeLists.txt  base_screen.cpp  base_struct.cpp  base_units.cpp  basicframe.cpp  bezier_curves.cpp  bin_mod.cpp  block_commande.cpp  build_version.cpp  class_bitmap_base.cpp  class_colors_design_settings.cpp  class_layer_box_selector.cpp  class_marker_base.cpp  class_page_info.cpp  class_plotter.cpp  class_undoredo_container.cpp  colors.cpp  common.cpp  common_plotDXF_functions.cpp  common_plotGERBER_functions.cpp  common_plotHPGL_functions.cpp  common_plotPDF_functions.cpp  common_plotPS_functions.cpp  common_plotSVG_functions.cpp  common_plot_functions.cpp  config_params.cpp  confirm.cpp  convert_basic_shapes_to_polygon.cpp  copy_to_clipboard.cpp  dialog_shim.cpp  displlst.cpp  dlist.cpp  draw_frame.cpp  draw_panel.cpp  draw_panel_gal.cpp  drawtxt.cpp  dsnlexer.cpp  eda_dde.cpp  (+40 more)
polygon/: CMakeLists.txt  PolyLine.cpp  math_for_graphics.cpp
(+570 files in other folders)
